--- a/Solomon/.classpath
+++ b/Solomon/.classpath
@@ -2,10 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/Program Files/robocode/libs/robocode.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Program Files/robocode/javadoc/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/usr/share/java/robocode.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
